vertical align fix

--- a/client/src/pages/Profile/Profile.css
+++ b/client/src/pages/Profile/Profile.css
@@ -32,6 +32,7 @@
     width: 90px;
     text-align: center;
     height: 43px;
+    vergical-align: top;
     /* padding-top: 5px;
     padding-bottom: 5px; */
     border: none;
